--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Servicio de ELECTRICIDAD en instalaciones, MANTENIMIENTO: PREVENTIVO, CORRECTIVO. Diseño e implementación
-               de luminarias. Asesoramiento en proyectos academicos."
+      content="Servicio de ELECTRICIDAD en IBARRA y sus alrededores en instalaciones, MANTENIMIENTO: PREVENTIVO, CORRECTIVO. Diseño e implementación
+               de luminarias. Asesoramiento en proyectos académicos."
     />
     <meta name="keywords" content="ELECTRICIDAD, ELECTRICO, INSTALACIONES, MANTENIMIENTO ELECTRICO"/>
     <meta name="author" content="Jeison Farinango">
