--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="author" content="Jeison Farinango">
     <meta name="publisher" content="Jeison Farinango">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="9VRsK9VspFBPM0Ggrccp6tl4YewCSq1RGrJdIRYbxSg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
